--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,38 @@
 # File created using '.gitignore Generator' for Visual Studio Code: https://bit.ly/vscode-gig
-# Created by https://www.toptal.com/developers/gitignore/api/visualstudio,visualstudiocode,vs
-# Edit at https://www.toptal.com/developers/gitignore?templates=visualstudio,visualstudiocode,vs
+# Created by https://www.toptal.com/developers/gitignore/api/vs,visualstudiocode,visualstudio,angular
+# Edit at https://www.toptal.com/developers/gitignore?templates=vs,visualstudiocode,visualstudio,angular
+
+### Angular ###
+## Angular ##
+# compiled output
+# dist/
+tmp/
+app/**/*.js
+app/**/*.js.map
+
+# dependencies
+node_modules/
+bower_components/
+
+# IDEs and editors
+.idea/
+
+# misc
+.sass-cache/
+connect.lock/
+coverage/
+libpeerconnection.log/
+npm-debug.log
+testem.log
+typings/
+.angular/
+
+# e2e
+e2e/*.js
+e2e/*.map
+
+# System Files
+.DS_Store/
 
 ### VisualStudioCode ###
 .vscode/*
@@ -178,7 +210,6 @@ nCrunchTemp_*
 AutoTest.Net/
 
 # Web workbench (sass)
-.sass-cache/
 
 # Installshield output folder
 [Ee]xpress/
@@ -300,7 +331,6 @@ FakesAssemblies/
 
 # Node.js Tools for Visual Studio
 .ntvs_analysis.dat
-node_modules/
 
 # Visual Studio 6 build log
 *.plg
@@ -576,7 +606,7 @@ FodyWeavers.xsd
 ### VisualStudio Patch ###
 # Additional files built by Visual Studio
 
-# End of https://www.toptal.com/developers/gitignore/api/visualstudio,visualstudiocode,vs
+# End of https://www.toptal.com/developers/gitignore/api/vs,visualstudiocode,visualstudio,angular
 
 # Custom rules (everything added below won't be overriden by 'Generate .gitignore File' if you use 'Update' option)
 
