--- a/angular.json
+++ b/angular.json
@@ -22,11 +22,13 @@
             "tsConfig": "tsconfig.app.json",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              {
+                "glob": "_redirects",
+                "input": "src",
+                "output": "/"
+              }
             ],
-            "glob": "_redirects",
-            "input": "src",
-            "output": "/",
             "styles": [
               "src/styles.css"
             ],
